syntax = "proto3";

option go_package="github.com/az58740/grpc-bidirectional-maxservice-proto/max";

message MaxRequest{
    int32 number = 1;
}

message MaxResponse{
    int32 max = 1;
}


service MaxService{
  // Bi-Directional Streaming
  rpc FindMax(stream MaxRequest) returns (stream MaxResponse) {};
}